Bug 1921427 - [devtools] Fix Headers MDN Link buttons in high Contrast Mode. r=devtools-reviewers,jdescottes.
The button should not have lower opacity in High Contrast Mode.
We also adapt their colors when the header is selected so we
get a nice contrast.

Differential Revision: https://phabricator.services.mozilla.com/D223939

--- a/devtools/client/shared/components/MdnLink.css
+++ b/devtools/client/shared/components/MdnLink.css
@@ -7,11 +7,17 @@
 .network-monitor .learn-more-link {
   display: inline-block;
   line-height: 16px;
+
+  &::before {
+    background-image: url(chrome://devtools/skin/images/help.svg);
+    background-size: contain;
+    -moz-context-properties: fill;
+    fill: var(--theme-icon-color);
+  }
 }
 
-.network-monitor .learn-more-link::before {
-  background-image: url(chrome://devtools/skin/images/help.svg);
-  background-size: contain;
+.network-monitor [role="treeitem"][aria-selected="true"] .learn-more-link:not(:hover)::before {
+  fill: var(--theme-selection-color);
 }
 
 .network-monitor .tree-container .learn-more-link {
@@ -23,7 +29,7 @@
   padding: 1px 0;
 }
 
-.network-monitor .tree-container tr:not(:hover) .learn-more-link {
+:root:not([forced-colors-active]) .network-monitor .tree-container tr:not(:hover) .learn-more-link {
   opacity: 0.4;
 }
 
